# mpi_examples

./: .gitignore  README.md
c/: block_data_decomposition.c  block_data_decomposition.h  circuit_finder-v2.c  circuit_finder.c  flyods_shortest_dist_serial.c  mid_pt_integration.c  sieve_of_eratosthenes-v1.c  test_block_data_decomposition.c
fortran/: CMakeLists.txt  bcast_2d_array.f90  distribute_points.f90  mod_types.f90  scatterv4d_arr_with_mpi_data_type.f90  scatterv_gatherv3d_with_mpi_type_subarray.f90  scatterv_gatherv_2d_with_mpi_subarray.f90  scatterv_gatherv_2d_with_mpi_subarray_1stdim.f90  scatterv_gatherv_2d_with_mpi_subarray_2nd_dim.f90  scatterv_gatherv_2ndDim_of_3d_with_mpi_subarray.f90  scatterv_gatherv_3d_with_mpi_subarray.f90  scatterv_gatherv_3d_with_mpi_subarray.f90.bak  scatterv_gatherv_mpi_contiguos.f90  scatterv_gatherv_mpi_contiguos_multidim_arr.f90  send_recv_3d_array_with_mpi_datatype.f90
